--- a/controller/pagina.html
+++ b/controller/pagina.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <label for="">Digite um nome: <input type="search" name="" id="buscar"></label>
+    <label for="buscar">Digite um nome: <input type="search" name="" id="buscar"></label>
     <button onclick="buscar()">Buscar</button>
 
     <p id="res"></p>
