--- a/controller/pagina.html
+++ b/controller/pagina.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,4 +12,32 @@
     <p id="res"></p>
 </body>
 <script src="/index.js"></script>
+</html> -->
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Adicionar Pessoas</title>
+</head>
+<body>
+  <h1>Adicionar Pessoas</h1>
+  <form id="form">
+    <label for="nome">Nome:</label>
+    <input type="text" id="nome" required>
+
+    <label for="cidade">Cidade:</label>
+    <input type="text" id="cidade" required>
+
+    <button type="button" onclick="adicionarPessoa()">Adicionar</button>
+  </form>
+
+  <h2>Buscar Pessoa</h2>
+  <input type="text" id="buscar" placeholder="Digite o nome para buscar">
+  <button type="button" onclick="buscar()">Buscar</button>
+
+  <div id="res"></div>
+
+  <script>
+    // Your existing JavaScript code for searching and displaying people goes here.
+  </script>
+</body>
 </html>
