--- a/controller/pagina.html
+++ b/controller/pagina.html
@@ -36,8 +36,8 @@
 
   <div id="res"></div>
 
-  <script>
-    // Your existing JavaScript code for searching and displaying people goes here.
+  <script src="/index.js">
+  
   </script>
 </body>
 </html>
